--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -79,6 +79,7 @@
     font-size: 16px;
     color:#fff;
     text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
   }
 
   h1,h2,h3,h4,h5{
@@ -275,6 +276,11 @@
     border: 1px solid black;
   }
 
+  .about__btn a{
+    color:black;
+  }
+
+
   /* Contact section */
 
   .contact-form{
@@ -321,7 +327,7 @@
   table {
     border-collapse: collapse;
     margin:0 auto;
-    width:100%;
+    width:90%;
   }
 
   th{
@@ -406,6 +412,7 @@
     .wrapper{
       width: 100%;
     }
+
     .col-1-2, .col-1-3, .col-2-3{
       width: 60%;
       float:none;
@@ -454,6 +461,18 @@
       opacity: 1;
       visibility: visible;
       max-height: 100px;
+    }
+
+    /* Small corrections of about section width*/
+
+    .about .col-2-3{
+      width:100%;
+      font-size: 1.3em;
+    }
+
+    /* Header logo position correction */
+    .logo{
+      padding-top:8px;
     }
 
   } 
