--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -254,6 +254,11 @@
     color:black;
   }
 
+  .portfolio img:hover{
+    transform: scale(1.1);
+    transition: all 0.6s ease-in-out;
+  }
+
   /* About section */
 
   .about{
@@ -357,7 +362,10 @@
 
   tr th:nth-child(1){
     text-align: left;
+    padding-left:3%;
   }
+
+
 
 
   /* Last section formatting*/
@@ -383,6 +391,11 @@
     display: block;
     float:left;
     margin:0 7.9px;
+  }
+
+  .icon-circle:hover {
+    background-color: rgba(255,255,255,0.3);
+    transition: all 0.3s ease-in-out;
   }
 
   /* Footer formatting */
