--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -235,6 +235,7 @@
     padding-right:20px;
     font-size: 20px;
     display: none;
+    opacity: 0;
     visibility: hidden;
   }
 
@@ -483,7 +484,7 @@
     }
 
     #toggle:checked ~ .header__nav li{
-      opacity: 1;
+      opacity: 1;   
       visibility: visible;
       max-height: 100px;
     }
@@ -496,6 +497,15 @@
     #toggle:checked ~ label .ham-icon{
       opacity: 0;
       visibility: hidden;
+    }
+
+    .ham-icon, .cross-icon {
+      transition:opacity 0.6s ease-in-out;
+    }
+
+    .ham-icon:hover{
+      /*transform: rotateZ(720deg);*/
+
     }
 
     /* Small corrections of about section width*/
